--- a/dissertation/bib.bib
+++ b/dissertation/bib.bib
@@ -357,7 +357,7 @@
 
 @Misc{tulip-clustering-coeff-doc,
     title = {{tulip module API - Tulip Python}},
-    howpublished = "http://tulip.labri.fr/Documentation/current/tulip-python/html/tulipreference.html#tulip.tlp.clusteringCoefficient",
+    howpublished = "http://tulip.labri.fr/Documentation/current/tulip-python/html/tulipreference.html\#tulip.tlp.clusteringCoefficient",
     author={Tulip},
     note="Last accessed: 17th March 2017"
 }
