--- a/dissertation/sections/10-appendices.tex
+++ b/dissertation/sections/10-appendices.tex
@@ -72,8 +72,7 @@ The below tables, Table \ref{table:30-nodes-full}, \ref{table:200-nodes-full}, \
 \centering
 \begin{tabular}{|l|l|l|l|l|}
 \hline
-                                   & None  & Edge  & Pruning & Both \\ \hline
-Time to load in the TLP            & 0.64  & 0.7   & 0.8     & 0.72 \\ \hline
+                                   & \textbf{None}  & \textbf{Edge}  & \textbf{Pruning} & \textbf{Both} \\ \hline
 Time from click to AJAX response   & 12.4  & 17    & 15.6    & 15.8 \\ \hline
 Time spend processing in Vis.js    & 0.8   & 0.8   & 0.6     & 0.6  \\ \hline
 Time spend creating vis.js network & 22.2  & 20.8  & 12.6    & 9    \\ \hline
@@ -83,6 +82,7 @@ Time from first to last Date()     & 170.8 & 129.6 & 85.8    & 63.2 \\ \hline
 Total Time Standard Deviation      & 15.2  & 19.3  & 20.5    & 15.1 \\ \hline
 Number of nodes                    & 31    & 18    & 9       & 7    \\ \hline
 Number of edges                    & 26    & 13    & 4       & 2    \\ \hline
+Time to load in the TLP            & 0.64  & 0.7   & 0.8     & 0.72 \\ \hline
 Time to prune the network          &       &       & 0.38    & 0.32 \\ \hline
 Time to bundle on edges            &       & 0.36  &         & 0.1  \\ \hline
 Packet Size                        & 1300  & 1012  & 827     & 785  \\ \hline
@@ -95,8 +95,7 @@ Packet Size                        & 1300  & 1012  & 827     & 785  \\ \hline
 \centering
 \begin{tabular}{|l|l|l|l|l|}
 \hline
-                                   & None   & Edge   & Pruning & Both  \\ \hline
-Time to load in the TLP            & 1.24   & 1.2    & 1.18    & 1.16  \\ \hline
+                                   & \textbf{None}  & \textbf{Edge}  & \textbf{Pruning} & \textbf{Both} \\ \hline
 Time from click to AJAX response   & 50     & 20.2   & 22      & 19    \\ \hline
 Time spend processing in Vis.js    & 4      & 3.6    & 2.2     & 1     \\ \hline
 Time spend creating vis.js network & 97.2   & 90     & 44.8    & 23.6  \\ \hline
@@ -106,6 +105,7 @@ Time from first to last Date()     & 7382.8 & 6749   & 663     & 146.6 \\ \hline
 Total Time Standard Deviation      & 2010.2 & 1074.9 & 187     & 14.5  \\ \hline
 Number of nodes                    & 199    & 155    & 60      & 17    \\ \hline
 Number of edges                    & 199    & 155    & 60      & 17    \\ \hline
+Time to load in the TLP            & 1.24   & 1.2    & 1.18    & 1.16  \\ \hline
 Time to prune the network          &        &        & 2.86    & 2.52  \\ \hline
 Time to bundle on edges            &        & 1.4    &         & 0.6   \\ \hline
 Packet Size                        & 7600   & 6100   & 3900    & 2300  \\ \hline
@@ -118,8 +118,7 @@ Packet Size                        & 7600   & 6100   & 3900    & 2300  \\ \hline
 \centering
 \begin{tabular}{|l|l|l|l|l|}
 \hline
-                                   & None    & Edge    & Pruning & Both  \\ \hline
-Time to load in the TLP            & 5.32    & 4.72    & 3.44    & 3.28  \\ \hline
+                                   & \textbf{None}  & \textbf{Edge}  & \textbf{Pruning} & \textbf{Both} \\ \hline
 Time from click to AJAX response   & 177.4   & 126.6   & 58.8    & 57    \\ \hline
 Time spend processing in Vis.js    & 15      & 13.4    & 9.2     & 2.6   \\ \hline
 Time spend creating vis.js network & 361.2   & 242.2   & 108.2   & 16.2  \\ \hline
@@ -129,6 +128,7 @@ Time from first to last Date()     & 59925   & 38140.2 & 9418.4  & 152.6 \\ \hli
 Total Time Standard Deviation      & 8343.5  & 9383    & 2223.1  & 30.5  \\ \hline
 Number of nodes                    & 1089    & 627     & 226     & 12    \\ \hline
 Number of edges                    & 1087    & 625     & 224     & 10    \\ \hline
+Time to load in the TLP            & 5.32    & 4.72    & 3.44    & 3.28  \\ \hline
 Time to prune the network          &         &         & 33.28   & 33.26 \\ \hline
 Time to bundle on edges            &         & 13.68   &         & 2.34  \\ \hline
 Packet Size                        & 41400   & 29400   & 20300   & 12400 \\ \hline
@@ -141,8 +141,7 @@ Packet Size                        & 41400   & 29400   & 20300   & 12400 \\ \hli
 \centering
 \begin{tabular}{|l|l|l|l|l|}
 \hline
-                                   & None     & Edge     & Pruning & Both    \\ \hline
-Time to load in the TLP            & 162.54   & 50.5     & 11.04   & 7.46    \\ \hline
+                                   & \textbf{None}  & \textbf{Edge}  & \textbf{Pruning} & \textbf{Both} \\ \hline
 Time from click to AJAX response   & 646      & 423      & 314.2   & 241     \\ \hline
 Time spend processing in Vis.js    & 35.8     & 33       & 26.8    & 16.8    \\ \hline
 Time spend creating vis.js network & 850.4    & 593      & 308.8   & 135.4   \\ \hline
@@ -152,6 +151,7 @@ Time from first to last Date()     & 252849.2 & 131606.6 & 48956.8 & 14532.8 \\ 
 Total Time Standard Deviation      & 32862    & 3937     & 6031.3  & 3341    \\ \hline
 Number of nodes                    & 2849     & 1737     & 802     & 286     \\ \hline
 Number of edges                    & 2835     & 1719     & 792     & 276     \\ \hline
+Time to load in the TLP            & 162.54   & 50.5     & 11.04   & 7.46    \\ \hline
 Time to prune the network          &          &          & 169.06  & 184.72  \\ \hline
 Time to bundle on edges            &          & 94.04    &         & 7.32    \\ \hline
 Packet Size                        & 114000   & 83500    & 63500   & 42900   \\ \hline
